# netchat-server-rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  config-test.toml  config.toml.example  docker-compose.yml  entrypoint.sh
.github/workflows/: docker-ci.yaml  rust-ci.yaml
src/: auth.rs  commands.rs  config.rs  conn_handler.rs  db.rs  main.rs  state.rs  textutils.rs  validators.rs  web_ui.rs
web/: index.html
