[package]
name = "netchat-server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.38"
warp = "0.3"
