[package]
name = "netchat-server"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = "0.4"
toml = "0.8.14"
serde_json = "1.0"
